2015-11-12 Martin Grønholdt

* README.md: Added more buzzwords.
* user/net/wifi.c: Ported to task system.
				  (ap_config): Made local to create_softap.
				  (station_config): Made local to wifi_connect_default.
* user/net/wifi.h (WIFI_MODE_CONFIG): Renamed WIFI_MODE_AP.
				  (wifi_init): Changed signature.
* user/user_main.c: Ported WiFi callbacks to tasks.


2015-11-10 Martin Grønholdt

* user/driver/button.c: Added de-bounce.
					   (button_intr_handler) Cleaned up the esp8266 specific stuff.
* user/driver/button.h: internal timer uses microseconds not milliseconds.
* user/user_config.h: Added signal_reset.
* user/user_main.c (reset): Added reset handler.
				   (start_connection): Add reset task.
				   (button_press): Handle long presses as reset.
* user/handlers/rest/net-passwd.c: Removed passwd_changed.
								  (create_put_response): Only set password to non empty value.


2015-11-09 Martin Grønholdt

* user/slighttp/http-handler.c: Missed the dl_list.h header.
* user/task.*: Reworked task system.
* user/user_main.c: Added initial button handling.
* user/driver/button.c: Code for connected buttons.


2015-11-08 Martin Grønholdt

* user/task.*: Added task handling code.
* user/user_main.c (user_init): Added task handler init.
							  : Added button handler code.
* user/user_config.h: Added definitions for physical pin connections.
* fs/Makefile: Run minify on fs in debug mode as well.


2015-11-05 Martin Grønholdt

* Makefile: Added free ROM messages to target flashfs.
* fs/Makefile: css-html-js-minify.py cripples the javescript files, so skip them.
* fs/root_src/404.html: Removed extra </div>.
* fs/root_src/about.html: Changed h2 to H3 like everywhere else.
						  Added firmware version.
* fs/root_src/connect/hostname.html: Use request.js.
* fs/root_src/connect/index.html: Fixed div.
								  Use request.js.
* fs/root_src/connect/nets.html: Use request.js.
* fs/root_src/connect/passwd.html: Use request.js.
* fs/root_src/index.html: Use request.js.