@@ -44,11 +44,11 @@
  * 
  * *Change this if new version does not break backward compatibility.*
  */
-#define CONFIG_MINOR_VERSION 0
+#define CONFIG_MINOR_VERSION 1
 /**
  * @brief Entries in config data including version and signature.
  */
-#define CONFIG_ENTRIES 4
+#define CONFIG_ENTRIES 5
 /**
  * @brief Configuration settings that are stored in flash goes in here.
  * 
@@ -76,11 +76,15 @@ struct config
 	 * @brief Address of the file system.
 	 */
 	uint32_t fs_addr;
+	/**
+	 * @brief Network mode.
+	 */
+	uint8_t network_mode;
 #ifdef DB_ESP8266
 	/**
 	 * @brief Padding to align on 4 byte boundary.
 	 */
-	//uint8_t padding[2];
+	uint8_t padding[3];
 #endif //DB_ESP8266
 }  __attribute__ ((__packed__));
 
@@ -136,7 +140,8 @@ struct cfg_entry config_entries[CONFIG_ENTRIES] = {
 	{4, 'u', "signature", "Configuration signature"},
 	{2, 'u', "bver", "Breaking version"},
 	{2, 'u', "cver", "Compatible version"},
-	{4, 'u', "fs_addr", "Address in flash of the file system"}
+	{4, 'u', "fs_addr", "Address in flash of the file system"},
+	{5, 'u', "network_mode", "Use AP or client mode for network"}
 };
 #endif //DB_ESP8266
 
